k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sensdle
  labels:
    name: sensdle
    app: sensdle-game
