k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sensdle-service
  namespace: sensdle
  labels:
    app: sensdle-app
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "3333"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 3333
    targetPort: 3333
    name: http
  selector:
    app: sensdle-app
